modified:   azureDevOps.html

--- a/azureDevOps.html
+++ b/azureDevOps.html
@@ -23,12 +23,17 @@
                     class="fa fa-bars"></i></a>
             <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Accueil</a>
             <a href="devOps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">DevOps</a>
-            <a href="azureDevOps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Azure DevOps</a>
-            <a href="principe.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Principe</a>
-            <a href="benefic.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Benefice</a>
-            <a href="pipeline.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Pipeline</a>
+            <a href="azureDevOps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Azure
+                DevOps</a>
+            <a href="principe.html"
+                class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Principe</a>
+            <a href="benefic.html"
+                class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Benefice</a>
+            <a href="pipeline.html"
+                class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Pipeline</a>
             <a href="tools.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Tools</a>
-            <a href="conclusion.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Conclusion</a>
+            <a href="conclusion.html"
+                class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Conclusion</a>
         </div>
 
 
@@ -37,19 +42,31 @@
             <h1 class="w3-margin w3-jumbo">DevOps Day Start</h1>
             <p class="w3-xlarge">Template by Ouali, Theo & Elias</p>
     </div>
-
-
-
-
-
-
-<!-- TON CONTENNUUUUUUU -->
-
-
-
-
-
-
+   
+    <div class="w3-row-padding w3-padding-64 w3-container">
+        <div class="w3-content">
+            <div class="w3-twothird">
+                <h1>Le Devops sur Azure</h1>
+                <h5 class="w3-padding-32">
+                    Azure DevOps est une plateforme complète de développement et d'exploitation (DevOps) offerte par
+                    Microsoft. Voici les principaux avantages d'Azure DevOps
+                    <ul>
+                        <li> Collaboration simplifiée</li>
+                        <li> Intégration continue (CI)</li>
+                        <li> Automatisation des tests</li>
+                        <li> Suivi des problèmes</li>
+                        <li> Gestion du code source</li>
+                        <li> Gestion des versions</li>
+                        <li> Sécurité intégrée</li>
+                        <li> Écosystème extensible</li>     
+                    </ul>
+                </h5>
+            </div>
+            <div class="w3-third w3-center">
+                <img src="Azure_Logo.png" alt="Vectorielle DevOps" width="300px">
+            </div>
+        </div>
+    </div> 
 
 
     <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
