--- a/principe.html
+++ b/principe.html
@@ -64,7 +64,7 @@
     <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
         <div class="w3-content">
             <div class="w3-third w3-center">
-                <img src="Microsoft-Azure.png" alt="Azure with DevOps" width="250px">
+                <img src="image.png" alt="Azure with DevOps" width="250px">
             </div>
             <div class="w3-twothird">
                 <h5 class="w3-padding-32">Un autre principe clé du DevOps est la transparence et la communication fluide entre les équipes. Grâce à
