modified:   azureDevOps.html 	modified:   benefic.html 	modified:   conclusion.html 	modified:   devops.html 	new file:   img/Azure_Logo.png 	new file:   img/Microsoft-Azure.png 	new file:   img/vectorielle.jpg 	modified:   index.html 	modified:   pipeline.html 	modified:   principe.html 	modified:   tools.html

--- a/tools.html
+++ b/tools.html
@@ -24,7 +24,7 @@
         <a href="devOps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">DevOps</a>
         <a href="azureDevOps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Azure DevOps</a>
         <a href="principe.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Principe</a>
-        <a href="benefic.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Benefice</a>
+        <a href="benefic.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Bénéfice</a>
         <a href="pipeline.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Pipeline</a>
         <a href="tools.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Tools</a>
         <a href="conclusion.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Conclusion</a>
@@ -87,7 +87,6 @@
             <i class="fa fa-twitter w3-hover-opacity"></i>
             <i class="fa fa-linkedin w3-hover-opacity"></i>
         </div>
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
 </body>
 
