--- a/azureDevOps.html
+++ b/azureDevOps.html
@@ -28,7 +28,7 @@
             <a href="principe.html"
                 class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Principe</a>
             <a href="benefic.html"
-                class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Benefice</a>
+                class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Bénéfice</a>
             <a href="pipeline.html"
                 class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Pipeline</a>
             <a href="tools.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Tools</a>
@@ -70,7 +70,7 @@
 
 
     <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-        <h1 class="w3-margin w3-xlarge">AgilitÃ©, collaboration, excellence DevOps</h1>
+        <h1 class="w3-margin w3-xlarge">Agilité, collaboration, excellence DevOps</h1>
     </div>
 
     <!-- Footer -->
@@ -83,7 +83,6 @@
             <i class="fa fa-twitter w3-hover-opacity"></i>
             <i class="fa fa-linkedin w3-hover-opacity"></i>
         </div>
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
 </body>
 
