--- a/devops.html
+++ b/devops.html
@@ -25,7 +25,7 @@
             <a href="devOps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">DevOps</a>
             <a href="azureDevOps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Azure DevOps</a>
             <a href="principe.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Principe</a>
-            <a href="benefic.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Benefice</a>
+            <a href="benefic.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Bénéfice</a>
             <a href="pipeline.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Pipeline</a>
             <a href="tools.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Tools</a>
             <a href="conclusion.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Conclusion</a>
@@ -50,7 +50,7 @@
     </h5>
                 </div>
                 <div class="w3-third w3-center">
-                    <img src="vectorielle.jpg" alt="Vectorielle DevOps" width="350px">
+                    <img src="img/vectorielle.jpg" alt="Vectorielle DevOps" width="350px">
                 </div>
             </div>
         </div>
@@ -73,7 +73,6 @@
                 <i class="fa fa-twitter w3-hover-opacity"></i>
                 <i class="fa fa-linkedin w3-hover-opacity"></i>
             </div>
-            <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
         </footer>
 </body>
 
