--- a/principe.html
+++ b/principe.html
@@ -24,7 +24,7 @@
         <a href="devOps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">DevOps</a>
         <a href="azureDevOps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Azure DevOps</a>
         <a href="principe.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Principe</a>
-        <a href="benefic.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Benefice</a>
+        <a href="benefic.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Bénéfice</a>
         <a href="pipeline.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Pipeline</a>
         <a href="tools.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Tools</a>
         <a href="conclusion.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Conclusion</a>
@@ -64,7 +64,7 @@
     <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
         <div class="w3-content">
             <div class="w3-third w3-center">
-                <img src="image.png" alt="Azure with DevOps" width="250px">
+                <img src="Microsoft-Azure.png" alt="Azure with DevOps" width="250px">
             </div>
             <div class="w3-twothird">
                 <h5 class="w3-padding-32">Un autre principe clé du DevOps est la transparence et la communication fluide entre les équipes. Grâce à
@@ -106,7 +106,6 @@
             <i class="fa fa-twitter w3-hover-opacity"></i>
             <i class="fa fa-linkedin w3-hover-opacity"></i>
         </div>
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
 </body>
 
