modified:   azureDevOps.html

--- a/azureDevOps.html
+++ b/azureDevOps.html
@@ -63,7 +63,7 @@
                 </h5>
             </div>
             <div class="w3-third w3-center">
-                <img src="Azure_Logo.png" alt="Vectorielle DevOps" width="300px">
+                <img src="img/Azure_Logo.png" alt="Vectorielle DevOps" width="300px">
             </div>
         </div>
     </div> 
