modified:   conclusion.html

--- a/conclusion.html
+++ b/conclusion.html
@@ -57,7 +57,7 @@
                         agilité, leur compétitivité et leur capacité à offrir une valeur ajoutée à leurs clients.</h5>
                 </div>
                 <div class="w3-third w3-center">
-                    <img src="vectorielle.jpg" alt="Vectorielle DevOps" width="350px">
+                    <img src="img/Azure_Logo.png" alt="Vectorielle DevOps" width="350px">
                 </div>
             </div>
         </div>
@@ -66,7 +66,7 @@
         <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
             <div class="w3-content">
                 <div class="w3-third w3-center">
-                    <img src="Microsoft-Azure.png" alt="Azure with DevOps" width="250px">
+                    <img src="img/Azure_Logo.png" alt="Azure with DevOps" width="250px">
                 </div>
                 <div class="w3-twothird">
                     <p class="w3-text-grey">En résumé, le DevOps favorise une collaboration étroite entre les développeurs et les opérationnels, en
