modif page bouton devops navbar

--- a/src/azureDevOps.html
+++ b/src/azureDevOps.html
@@ -22,7 +22,7 @@
                 href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i
                     class="fa fa-bars"></i></a>
             <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Accueil</a>
-            <a href="devOps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">DevOps</a>
+            <a href="devops.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">DevOps</a>
             <a href="azureDevOps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Azure
                 DevOps</a>
             <a href="principe.html"
