--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 
         <!-- Header -->
         <header class="w3-container w3-red w3-center" style="padding:128px 16px">
-            <h1 class="w3-margin w3-jumbo">DevOps Day Start</h1>
+            <h1 class="w3-margin w3-jumbo">DevOps 17 Mai</h1>
             <p class="w3-xlarge">Template by Ouali, Theo & Elias</p>
         </header>
         <!-- First Grid -->
